fix: change list responses