@@ -6,10 +6,9 @@ import gift.api.product.domain.Product;
 import gift.api.product.dto.ProductRequest;
 import gift.api.product.dto.ProductResponse;
 import gift.api.product.repository.ProductRepository;
+import gift.global.PageResponse;
 import gift.global.exception.NoSuchEntityException;
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -21,7 +20,8 @@ public class ProductService {
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
 
-    public ProductService(ProductRepository productRepository, CategoryRepository categoryRepository) {
+    public ProductService(ProductRepository productRepository,
+        CategoryRepository categoryRepository) {
         this.productRepository = productRepository;
         this.categoryRepository = categoryRepository;
     }
@@ -31,15 +31,14 @@ public class ProductService {
             .orElseThrow(() -> new NoSuchEntityException("product")));
     }
 
-    public List<ProductResponse> getAllProducts(Pageable pageable) {
+    public PageResponse<ProductResponse> getAllProducts(Pageable pageable) {
         Page<Product> products = productRepository.findAll(pageable);
-        if (products.hasContent()) {
-            return products.getContent()
-                    .stream()
-                    .map(ProductResponse::of)
-                    .collect(Collectors.toList());
-        }
-        return Collections.emptyList();
+        List<ProductResponse> contents = products.getContent()
+            .stream()
+            .map(ProductResponse::of)
+            .toList();
+        return PageResponse.of(products.getPageable(), products.getTotalElements(),
+            products.getTotalPages(), contents);
     }
 
     @Transactional
@@ -53,11 +52,11 @@ public class ProductService {
     public void update(Long id, ProductRequest productRequest) {
         Category category = findCategoryById(productRequest.categoryId());
         Product product = productRepository.findById(id)
-                .orElseThrow(() -> new NoSuchEntityException("product"));
+            .orElseThrow(() -> new NoSuchEntityException("product"));
         product.update(category,
-                productRequest.name(),
-                productRequest.price(),
-                productRequest.imageUrl());
+            productRequest.name(),
+            productRequest.price(),
+            productRequest.imageUrl());
     }
 
     @Transactional
